Constrain release version to xenial

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
+dist: xenial
 before_install:
-  - sudo apt-get install -y assimp
+  - sudo apt-get install -y libassimp3v5
 language: python
 python:
   - "3.5"
