--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 dist: xenial
 before_install:
-  - sudo apt-get install -y libassimp3v5
+  - wget https://github.com/assimp/assimp/archive/v4.1.0.tar.gz
+  - tar -xvf /tmp/v4.1.0.tar.gz
+  - pushd assimp-4.1.0 && cmake CMakeLists.txt -G 'Unix Makefiles' && make && make install && popd
 language: python
 python:
   - "3.5"
