--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,8 @@ envlist = py37
 skipsdist = True
 
 [testenv]
-deps = -r requirements.txt
+deps = 
+    -r requirements.txt
 changedir = test
 commands = 
     ./run_test.py
