AUS-3150 Broaden out test coverage

--- a/test/unit/assimp_kit/.coveragerc
+++ b/test/unit/assimp_kit/.coveragerc
@@ -1,6 +1,6 @@
 [run]
+source =
+    ../../../scripts
 omit =
-    # Omit pyassimp etc.
-    */site-packages/*
     # Omit print_assimp - only used for debugging
     */print_assimp.py
