AUS-3423 Create superclass for *Kit classes

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
-envlist = py37
+envlist = py36, py37
 skipsdist = True
+skip_missing_interpreters = True
 
 [testenv]
 deps = 
-    -r requirements.txt
+    -r{toxinidir}/requirements.txt
 changedir = test
 commands = 
     ./run_test.sh
