Add missing part to tox file

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ skip_missing_interpreters = True
 
 [testenv]
 deps = 
+    pytest
     -r{toxinidir}/requirements.txt
 changedir = test
 commands = 
