--- a/web_build/input/EastLachlanConvParam.json
+++ b/web_build/input/EastLachlanConvParam.json
@@ -8,10 +8,11 @@
     },
     "ModelProperties": {
         "crs": "EPSG:28355",
-        "init_cam_dist": 900000.0,
+        "init_cam_dist": 2000000.0,
         "name": "East Lachlan Orogen",
         "modelUrlPath": "eastlachlan",
-        "proj4_defn": "+proj=utm +zone=55 +south +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs"
+        "proj4_defn": "+proj=utm +zone=55 +south +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
+        "background_colour": "rgb(159, 157, 230)" 
     },
     "WMSServices": [
         {
