--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,29 @@
 [project]
 # PEP 621 project metadata
 # See https://www.python.org/dev/peps/pep-0621/
-dependencies = ["numpy", "OWSLib==0.28.1", "Pillow", "pyassimp", "pycollada", "pyproj", "SQLAlchemy", "diskcache", "nvcl-kit", "geojson", "fastapi", "aiofiles", "uvicorn", "wheel"]
+dependencies = [
+    "numpy",
+    "OWSLib==0.28.1",
+    "Pillow",
+    "pyassimp @ file:///${PROJECT_ROOT}/test/assimp-5.2.5/port/PyAssimp",
+    "pycollada",
+    "pyproj",
+    "SQLAlchemy",
+    "diskcache",
+    "nvcl-kit",
+    "geojson",
+    "fastapi",
+    "aiofiles",
+    "uvicorn",
+    "wheel",
+]
 requires-python = ">=3.10"
 
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
+
+[tool.pdm]
+
+[tool.pdm.scripts]
+pre_install = "sh -c test/build_assimp.sh"
