Testing build-models env

--- a/.github/workflows/build-models.yml
+++ b/.github/workflows/build-models.yml
@@ -49,6 +49,7 @@ jobs:
         export GEOMODELS_HOME=`pwd`/MODEL_SRC
         echo "GEOMODELS_HOME=$GEOMODELS_HOME"
         eval $(pdm venv activate)
+        env
         cd web_build/
         ./batch_proc.py
 
