Build action - upload outputs as artifacts

--- a/.github/workflows/build-models.yml
+++ b/.github/workflows/build-models.yml
@@ -60,5 +60,11 @@ jobs:
         eval $(pdm venv activate)
         cd web_build/
         ./batch_proc.py --model_name=${{matrix.model_name}}
+    - name: Upload output
+    - uses: actions/upload-artifact@v4
+      with:
+        name: geomodels-${{matrix.model_name}}
+        path: geomodels/
+        if-no-files-found: error
 
 
