Update build action - fix typo

--- a/.github/workflows/build-models.yml
+++ b/.github/workflows/build-models.yml
@@ -61,7 +61,7 @@ jobs:
         cd web_build/
         ./batch_proc.py --model_name=${{matrix.model_name}}
     - name: Upload output
-    - uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v4
       with:
         name: geomodels-${{matrix.model_name}}
         path: geomodels/
