Updates to build action
- remove unnecessary debug lines
- update python action
- comment out failing build

--- a/.github/workflows/build-models.yml
+++ b/.github/workflows/build-models.yml
@@ -79,9 +79,9 @@ jobs:
           # NSW - "New England Orogen 3D fault model"
           - src_name: "GEOMODELS_SRC-NewSouthWales"
             model_name: "NewEngland"
-          # NT - McArthur Basin
-          - src_name: "GEOMODELS_SRC-NorthernTerritory"
-            model_name: "McArthurBasin"
+          ## NT - McArthur Basin
+          #- src_name: "GEOMODELS_SRC-NorthernTerritory"
+          #  model_name: "McArthurBasin"
           # GA - North Qld
           - src_name: "GEOMODELS_SRC-GA"
             model_name: "NorthQueensland"
@@ -100,7 +100,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
         python-version: "3.10"
     - name: Install COLLADA2GLTF
@@ -133,11 +133,6 @@ jobs:
         eval $(pdm venv activate)
         cd web_build/
         ./batch_proc.py --model_name=${{matrix.model_name}}
-        pwd
-        ls
-        cd ..
-        pwd
-        ls
     - name: Upload output
       uses: actions/upload-artifact@v4
       with:
