--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,31 +1,33 @@
-# Release web assets from the latest successful build action
+# Release web assets from the latest successful build action into a certain release
 name: Release web assets
-env:
-  # Model source tag
-  SRC_TAG: 'PORTAL_RELEASE_20210718'
 
 on: workflow_dispatch
+  inputs:
+    - name: rel_tag
+      description: Files are inserted into the release with this tag
+      type: string
+      required: false
+      default: 'PORTAL_RELEASE_20210718'
 
 jobs:
   do-release:
     runs-on: ubuntu-latest
     steps:
-    - name: Download artifact
+    - name: Download artifacts
       uses: dawidd6/action-download-artifact@v6
       with:
         workflow: build-models.yml
         workflow_conclusion: success
         branch: master
-    - name: Test
+    - name: Bundle artifacts together
       run: |
-        ls
         mkdir geomodels
         for i in `ls -d1 geomodels-*`; do mv $i/* geomodels; done
-        ls geomodels
-    - name: Release
+        tar cvfz ${{inputs.rel_tag}}-geomodels_web_assets.tar.gz ./geomodels
+    - name: Add to release
       uses: softprops/action-gh-release@v2
       with:
-        tag_name: ${{env.SRC_TAG}}
-        name: Web asset release based on model sources tag ${{env.SRC_TAG}}
+        tag_name: ${{inputs.rel_tag}}
+        name: Source and web asset release based on tag ${{inputs.rel_tag}}
         files: |
-          geomodels/*
+          ${{inputs.rel_tag}}-geomodels_web_assets.tar.gz
