--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,4 +26,4 @@ jobs:
         tag_name: ${{inputs.rel_tag}}
         name: Source and web asset release based on tag ${{inputs.rel_tag}}
         files: |
-          geomodels-*-web-assets.tar.gz
+          *-web-assets.tar.gz
