Try to fix file path problem

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,5 +25,4 @@ jobs:
       with:
         tag_name: ${{inputs.rel_tag}}
         name: Source and web asset release based on tag ${{inputs.rel_tag}}
-        files: |
-          *-web-assets.tar.gz
+        files: '*.tar.gz'
