--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,4 +25,5 @@ jobs:
       with:
         tag_name: ${{inputs.rel_tag}}
         name: Source and web asset release based on tag ${{inputs.rel_tag}}
-        files: ./geomodels*
+        files: ./**/*.tar.gz
+        fail_on_unmatched_files: true
