--- a/.github/workflows/build-models.yml
+++ b/.github/workflows/build-models.yml
@@ -15,7 +15,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  includes_only:
+  build_models:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -143,3 +143,50 @@ jobs:
         name: geomodels-${{matrix.model_name}}-web-assets.tar.gz
         path: web_build/geomodels-${{matrix.model_name}}-web-assets.tar.gz
         if-no-files-found: error
+  build_backend:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.10"
+    - name: Install PDM
+      run: |
+        python -m pip install --upgrade pip
+        pip install pdm
+    - name: Install dependencies
+      run: |
+        pdm install
+    - name: Make boreholes
+      run: |
+        # Temporarily, a patched version of assimp lives in the 'test' dir
+        # It was installed and built via 'pdm install'
+        ASSIMP_VER=5.2.5
+        export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/test/assimp-$ASSIMP_VER/bin
+        echo "LD_LIBRARY_PATH=$LD_LIBRARY_PATH"
+        pushd web_build
+        ./make_boreholes.py -b batch.txt -d query_data.db boreholes
+        tar cvfz boreholes.tag.gz ./boreholes
+        rm -rf boreholes
+        popd
+    - name: Upload borehole data
+      uses: actions/upload-artifact@v4
+      with:
+        name: boreholes.tar.gz
+        path: web_build/boreholes.tar.gz
+        if-no-files-found: error
+    - name: Make API directory
+      run: |
+        pushd scripts
+        ./build_api_dir.sh ../web_build/query_data.db
+        popd
+    - name: Upload API directory
+      uses: actions/upload-artifact@v4
+      with:
+        name: api.tar
+        path: scripts/api.tar
+        if-no-files-found: error
+    
+    
