--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -61,8 +61,8 @@ jobs:
     - name: Upload API directory
       uses: actions/upload-artifact@v4
       with:
-        name: api.tar
-        path: web_build/api.tar
+        name: api.tar.gz
+        path: web_build/api.tar.gz
         if-no-files-found: error
     
     
