Update assimp path in build_backend.yml

--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -40,7 +40,7 @@ jobs:
         eval $(pdm venv activate for-backend-build)
         # NB: assimp was installed and built via 'pdm install'
         ASSIMP_VER=5.4.3
-        export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/test/assimp-$ASSIMP_VER/bin
+        export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/assimp-$ASSIMP_VER/bin
         echo "LD_LIBRARY_PATH=$LD_LIBRARY_PATH"
         pushd web_build
         ./make_boreholes.py -b batch.txt -d query_data.db boreholes
