--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
-
 [project]
 # PEP 621 project metadata
 # See https://www.python.org/dev/peps/pep-0621/
 dependencies = [
     "numpy",
-    "OWSLib==0.28.1",
+    "OWSLib",
     "Pillow",
     "pyassimp @ file:///${PROJECT_ROOT}/assimp-5.4.3/port/PyAssimp",
     "pycollada",
@@ -17,6 +16,7 @@ dependencies = [
     "aiofiles",
     "uvicorn",
     "wheel",
+    "pytest>=8.3.2",
 ]
 requires-python = ">=3.10"
 
