--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,10 +37,11 @@ jobs:
       run: |
         cd test
         ./run_test.sh
-    - name: Deploy test badge to gh-pages
+    - name: Deploy test badge to master
       uses: JamesIves/github-pages-deploy-action@v4
       with:
           folder: tests/badge
-          branch: gh-pages
+          target-folder: tests/badge
+          branch: master
         
         
