--- a/web_build/input/EastLachlanConvParam.json
+++ b/web_build/input/EastLachlanConvParam.json
@@ -15,7 +15,7 @@
     "WMSServices": [
         {
             "display_name": "GA Lithostratigraphy",
-            "model_url": "http://services.ga.gov.au/gis/services/GA_Surface_Geology/MapServer/WMSServer",
+            "model_url": "https://services.ga.gov.au/gis/services/GA_Surface_Geology/MapServer/WMSServer",
             "name": "AUS_GA_2500k_GUPoly_Lithostratigraphy",
             "version": "1.3.0"
         }    
