Update build-models.yml spelling

--- a/.github/workflows/build-models.yml
+++ b/.github/workflows/build-models.yml
@@ -1,6 +1,6 @@
-# This workflow builds model web assets from a model sources
+# This workflow builds model web assets from model sources
 # with an option to build a release using current master
-# TODO: Paramterize model source tag ${{env.SRC_TAG}}
+# TODO: Parameterize model source tag ${{env.SRC_TAG}}
 
 name: Build Models
 env:
