Fix broken tests - remove assimp from tests - create pdm 'test' group for packages used by tests - fix "coverage run" tests failing because Python env missing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,14 @@ dependencies = [
 ]
 requires-python = ">=3.9"
 
+[project.optional-dependencies]
+test = [
+    "coverage>=7.6.2",
+    "defusedxml>=0.7.1",
+    "genbadge>=1.1.1",
+    "pytest>=8.3.3",
+    "httpx>=0.27.2",
+]
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
