--- a/.github/workflows/release_models.yml
+++ b/.github/workflows/release_models.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Download artifacts
       uses: dawidd6/action-download-artifact@v6
       with:
-        workflow: build-models.yml
+        workflow: build_models.yml
         workflow_conclusion: success
         branch: master
     - name: Add to release
