AUS-4233 Update nvcl_kit to latest version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "pyproj",
     "SQLAlchemy",
     "diskcache",
-    "nvcl-kit",
+    "nvcl-kit>=1.2.3",
     "geojson",
     "fastapi",
     "aiofiles",
