--- a/.github/workflows/release_backend.yml
+++ b/.github/workflows/release_backend.yml
@@ -16,6 +16,9 @@ jobs:
         workflow: build_backend.yml
         workflow_conclusion: success
         branch: master
+    - name: List files
+      run: |
+          ls -l
     - name: Add to release
       uses: softprops/action-gh-release@v2
       with:
